--- a/app/churchill/templates/handlebars.html
+++ b/app/churchill/templates/handlebars.html
@@ -43,4 +43,51 @@
         {{/each}}
     </div>
 </script>
+
+<script id="t-shot-type-item" type="text/x-handlebars-template">
+    <li class="shot-type mdl-list__item mdl-list__item--two-line">
+        <span class="mdl-list__item-primary-content">
+            <img src="{{ image }}" class="image">
+            <span class="shot-title">
+                {{ title }}
+                ({{ volume }}ml)
+            </span>
+        </span>
+        <span class="mdl-list__item-secondary-content">
+            <button class="mdl-button mdl-js-button mdl-button--icon decrease">
+                <i class="material-icons">remove_circle_outline</i>
+            </button>
+            <span class="quantity">
+                <input type="text" name="quantity" value="0" data-type-id="{{ id }}">
+            </span>
+            <button class="mdl-button mdl-js-button mdl-button--icon mdl-button--colored increase">
+                <i class="material-icons">add_circle_outline</i>
+            </button>
+        </span>
+    </li>
+</script>
+
+<script id="t-add-shot-dialog" type="text/x-handlebars-template">
+    <h4 class="mdl-dialog__title">Choose shot and quantity</h4>
+    <div class="mdl-dialog__content">
+        <h5>Mainly used shots</h5>
+        <ul class="mdl-list">
+            {{#each user_types }}
+                {{>shot-type-item}}
+            {{/each}}
+        </ul>
+        <h5>Other shots</h5>
+        <ul class="mdl-list">
+            {{#each all_types }}
+                {{>shot-type-item}}
+            {{/each}}
+        </ul>
+    </div>
+    <div class="mdl-dialog__actions">
+        <button type="button" class="mdl-button close">Close</button>
+        <button type="button" class="mdl-button mdl-button--primary add">Add</button>
+        <div class="mdl-layout-spacer"></div>
+        <button id="open-add-shot-type-dialog" type="button" class="mdl-button">Add Option</button>
+    </div>
+</script>
 {% endverbatim %}
