Update add type action

--- a/app/churchill/templates/index.html
+++ b/app/churchill/templates/index.html
@@ -7,4 +7,8 @@
         {% include 'shots/list.html' %}
     </div>
     {% include 'shots/add_form.html' %}
+
+    <div id="dialog" class="mdl-dialog dialog hidden">
+        <div class="mdl-dialog__content content"></div>
+    </div>
 {% endblock %}
