--- a/app/churchill/static/css/base.css
+++ b/app/churchill/static/css/base.css
@@ -1,4 +1,5 @@
 body {
+    position: relative;
     font-family: Roboto, Arial, Helvetica, serif;
     font-size: 16px;
     font-weight: 400;
@@ -9,6 +10,30 @@ body {
     max-width: 1000px;
     margin: 0 auto;
     padding: 0;
+}
+
+.dialog {
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    background: #FFF;
+    z-index: 1000;
+}
+
+.dialog .actions {
+    position: absolute;
+    bottom: 0;
+}
+
+.add-shot {
+    position: fixed;
+    display: block;
+    right: 0;
+    bottom: 0;
+    margin-right: 16px;
+    margin-bottom: 16px;
+    z-index: 900;
 }
 
 form.login {
@@ -28,30 +53,6 @@ form .error-holder {
     padding: 1em 0;
 }
 
-.dialog {
-    position: absolute;
-    top: 16px;
-    left: 0;
-    right: 0;
-    width: calc(100% - 32px);
-    max-width: 968px;
-    margin: auto;
-    background: #FFF;
-    z-index: 1000;
-}
-
-#open-add-shot-dialog {
-    position: fixed;
-    display: block;
-    right: 0;
-    bottom: 0;
-    margin-right: 16px;
-    margin-bottom: 16px;
-    z-index: 900;
-}
-
-#add-shot-dialog {
-}
 
 #add-shot-dialog h5 {
     margin: 0;
