--- a/app/churchill/templates/common/layout.html
+++ b/app/churchill/templates/common/layout.html
@@ -73,6 +73,8 @@
                 <script src="{% static 'js/shots/shot-type.model.js' %}"></script>
                 <script src="{% static 'js/shots/shot-type.view.js' %}"></script>
 
+                <script src="{% static 'js/plugins/dialog.js' %}"></script>
+
                 <script src="{% static 'js/common.js' %}"></script>
                 <script src="{% static 'js/index.js' %}"></script>
             {% endcompress %}
@@ -82,6 +84,8 @@
 
             <script src="{% static 'js/shots/shot-type.model.js' %}"></script>
             <script src="{% static 'js/shots/shot-type.view.js' %}"></script>
+
+            <script src="{% static 'js/plugins/dialog.js' %}"></script>
 
             <script src="{% static 'js/common.js' %}"></script>
             <script src="{% static 'js/index.js' %}"></script>
