--- a/app/churchill/templates/index.html
+++ b/app/churchill/templates/index.html
@@ -3,12 +3,12 @@
 {% load static %}
 
 {% block content %}
-    <div id="shot-list" class="container">
-        {% include 'shots/list.html' %}
-    </div>
-    {% include 'shots/add_form.html' %}
-
-    <div id="dialog" class="mdl-dialog dialog hidden">
-        <div class="mdl-dialog__content content"></div>
+    <div class="window">
+        <div class="main">
+            {% include 'shots/list.html' %}
+            <button class="open-dialog mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+                <i class="material-icons">add</i>
+            </button>
+        </div>
     </div>
 {% endblock %}
