--- a/app/churchill/templates/common/layout.html
+++ b/app/churchill/templates/common/layout.html
@@ -49,7 +49,7 @@
         {% endif %}
     </head>
     <body>
-        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header gradient">
             {% include 'common/header.html' %}
             <main class="mdl-layout__content">
                 {% block content %}
