--- a/app/churchill/templates/shots/list.html
+++ b/app/churchill/templates/shots/list.html
@@ -1,5 +1,5 @@
-<div class="mdl-grid">
-    <h2 class="mdl-cell mdl-cell--12-col">Your Latest shots</h2>
+<h2>Your Latest shots</h2>
+<div id="shot-list" class="mdl-grid mobile-container">
     {% for shot in shots %}
         <div class="mdl-cell mdl-cell--4-col">
             <div class="mdl-card shot">
