--- a/app/churchill/templates/static/about.html
+++ b/app/churchill/templates/static/about.html
@@ -4,8 +4,8 @@
 
 {% block content %}
     <div class="container static">
-        <h1>About App</h1>
-        <p>Traugott is an application for calculation of individual alcohol consumption.</p>
+        <h1>About</h1>
+        <p><strong>Churchill</strong> is an application for calculation of individual alcohol consumption.</p>
         <p>This application currently in beta, so no warranties, use at your own risk.</p>
         <br>
         <p>Current version: <strong>0.1.37</strong></p>
