--- a/app/churchill/static/css/base.css
+++ b/app/churchill/static/css/base.css
@@ -3,6 +3,7 @@ body {
     font-family: Roboto, Arial, Helvetica, serif;
     font-size: 16px;
     font-weight: 400;
+    color: #FFF;
 }
 
 .container {
@@ -23,6 +24,7 @@ body {
 
 .dialog .actions {
     position: absolute;
+    padding: 1em;
     bottom: 0;
 }
 
@@ -58,6 +60,41 @@ form .error-holder {
     margin: 0;
 }
 
+#popular-panel {
+    text-align: center;
+}
+
+#popular-panel .image {
+    width: 250px;
+    height: 250px;
+    margin: 1em auto;
+    overflow: hidden;
+}
+
+#popular-panel .image img {
+    min-width: 100%;
+    max-width: 100%;
+}
+
+#popular-panel .quantity {
+    padding-bottom: 1em;
+}
+
+#popular-panel .quantity input {
+    width: 20%;
+    padding: 0.2em;
+    font-size: 1.2em;
+    text-align: center;
+    border: none;
+    border-bottom: 1px solid #CCC;
+}
+
+#popular-panel .quantity .material-icons {
+    position: relative;
+    top: 5px;
+    padding: 1em;
+}
+
 .shot-type .image {
     width: 50px;
 }
@@ -76,10 +113,6 @@ form .error-holder {
     font-size: 1em;
     text-align: center;
     border: none;
-    border-bottom: 1px solid #CCC;
-}
-
-.mdl-grid h2 {
     border-bottom: 1px solid #CCC;
 }
 
@@ -105,6 +138,16 @@ form .error-holder {
     top: 2px;
     margin: 0;
     padding: 0;
+}
+
+#shot-type-tabs {
+    width: calc(100% - 16px);
+    margin: 0 auto;
+}
+
+#shot-type-tabs .mdl-tabs__tab {
+    width: 50%;
+    color: #FFF;
 }
 
 .shot .quantity input {
@@ -164,4 +207,18 @@ form .error-holder {
     top: -18px;
     font-size: 0.8em;
     color: #999;
+}
+
+/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#330838+0,0d818e+100 */
+.gradient {
+     /* Old browsers */
+    background: #330838;
+    /* FF3.6-15 */
+    background: -moz-linear-gradient(-45deg,  #330838 0%, #0d818e 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: -webkit-linear-gradient(-45deg,  #330838 0%,#0d818e 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    background: linear-gradient(135deg,  #330838 0%,#0d818e 100%);
+    /* IE6-9 fallback on horizontal gradient */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#330838', endColorstr='#0d818e',GradientType=1 );
 }
