--- a/app/churchill/templates/common/layout.html
+++ b/app/churchill/templates/common/layout.html
@@ -1,3 +1,4 @@
+{% load compile_static %}
 {% load static compress %}
 
 <!DOCTYPE html>
@@ -28,28 +29,16 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto:300,400,700&subset=cyrillic">
         <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
 
-        {% if USE_COMPRESSOR %}
-            {% compress css %}
-                <link rel="stylesheet" type="text/css" href="{% static 'css/mdl.css' %}">
-                <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
-                <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/phone.css' %}">
-                <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/phablet.css' %}">
-                <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/tablet.css' %}">
-                <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/notebook.css' %}">
-                <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/desktop.css' %}">
-            {% endcompress %}
-        {% else %}
-            <link rel="stylesheet" type="text/css" href="{% static 'css/mdl.css' %}">
-            <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
-            <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/phone.css' %}">
-            <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/phablet.css' %}">
-            <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/tablet.css' %}">
-            <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/notebook.css' %}">
-            <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/desktop.css' %}">
-        {% endif %}
+        <link rel="stylesheet" type="text/css" href="{% static 'less/base.less'|compile %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'less/mdl.less'|compile %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'less/responsive/phone.less'|compile %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'less/responsive/phablet.less'|compile %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'less/responsive/tablet.less'|compile %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'less/responsive/notebook.less'|compile %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'less/responsive/desktop.less'|compile %}">
     </head>
     <body>
-        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header gradient">
+        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--no-desktop-drawer-button gradient">
             {% include 'common/header.html' %}
             <main class="mdl-layout__content container">
                 {% block content %}
@@ -65,31 +54,13 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.2.1/material.min.js"></script>
 
-        {% if USE_COMPRESSOR %}
-            {% compress js %}
-                <script src="{% static 'js/shots/shot.model.js' %}"></script>
-                <script src="{% static 'js/shots/shot.view.js' %}"></script>
-
-                <script src="{% static 'js/shots/shot-type.model.js' %}"></script>
-                <script src="{% static 'js/shots/shot-type.view.js' %}"></script>
-
-                <script src="{% static 'js/plugins/dialog.js' %}"></script>
-
-                <script src="{% static 'js/common.js' %}"></script>
-                <script src="{% static 'js/index.js' %}"></script>
-            {% endcompress %}
-        {% else %}
-            <script src="{% static 'js/shots/shot.model.js' %}"></script>
-            <script src="{% static 'js/shots/shot.view.js' %}"></script>
-
-            <script src="{% static 'js/shots/shot-type.model.js' %}"></script>
-            <script src="{% static 'js/shots/shot-type.view.js' %}"></script>
-
-            <script src="{% static 'js/plugins/dialog.js' %}"></script>
-
-            <script src="{% static 'js/common.js' %}"></script>
-            <script src="{% static 'js/index.js' %}"></script>
-        {% endif %}
+        <script src="{% static 'js/shots/shot.model.js' %}"></script>
+        <script src="{% static 'js/shots/shot.view.js' %}"></script>
+        <script src="{% static 'js/shots/shot-type.model.js' %}"></script>
+        <script src="{% static 'js/shots/shot-type.view.js' %}"></script>
+        <script src="{% static 'js/plugins/dialog.js' %}"></script>
+        <script src="{% static 'js/common.js' %}"></script>
+        <script src="{% static 'js/index.js' %}"></script>
 
         {% include 'handlebars/shot.html' %}
         {% include 'handlebars/shot-type.html' %}
