Update desktop layout for dialog

--- a/app/churchill/static/less/responsive/phone.less
+++ b/app/churchill/static/less/responsive/phone.less
@@ -14,7 +14,7 @@
     }
 
     .container {
-        width: 100%;
+        width: 95%;
     }
 
     .mobile-container {
@@ -23,6 +23,12 @@
         .mdl-grid {
             padding: 0;
         }
+    }
+
+    .dialog {
+        left: 100%;
+        margin-left: 0;
+        opacity: 1;
     }
 
     .mdl-layout__content {
