--- a/app/churchill/static/less/base.less
+++ b/app/churchill/static/less/base.less
@@ -16,10 +16,11 @@ body {
 .dialog {
     position: absolute;
     top: 0;
-    left: 100%;
+    left: 0;
+    height: 100%;
     width: 100%;
-    background: #FFF;
     z-index: 1000;
+    opacity: 0;
 
     .actions {
         position: absolute;
