--- a/app/churchill/templates/handlebars/dialogs.html
+++ b/app/churchill/templates/handlebars/dialogs.html
@@ -17,58 +17,60 @@
             </ul>
         </div>
     </div>
-    <div class="mdl-dialog__content content">
-        <div id="shot-type-tabs" class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
-            <div class="mdl-tabs__tab-bar">
-                <a href="#popular-panel" class="mdl-tabs__tab is-active">
-                    <i class="material-icons">view_carousel</i>
-                </a>
-                <a href="#library-panel" class="mdl-tabs__tab">
-                    <i class="material-icons">view_agenda</i>
-                </a>
-            </div>
-            <div class="mdl-tabs__panel is-active" id="popular-panel">
-                <div class="mobile-container">
-                    {{#popular}}
-                        <div class="image"><img src="{{ image }}"></div>
-                        <div class="name">{{ title }}</div>
-                        <div class="quantity">
-                            <button class="mdl-button mdl-js-button mdl-button--icon decrease popular">
-                                <i class="material-icons">remove</i>
-                            </button>
-                            <span class="quantity">
-                                <input type="text" name="quantity" value="{{ volume }}"
-                                       data-type-id="{{ id }}" data-step="{{ volume }}">
-                                {{ measure }}
-                            </span>
-                            <button class="mdl-button mdl-js-button mdl-button--icon mdl-button--colored increase popular">
-                                <i class="material-icons">add</i>
-                            </button>
-                        </div>
-                    {{/popular}}
+    <div class="container">
+        <div class="mdl-dialog__content content">
+            <div id="shot-type-tabs" class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
+                <div class="mdl-tabs__tab-bar">
+                    <a href="#popular-panel" class="mdl-tabs__tab is-active">
+                        <i class="material-icons">view_carousel</i>
+                    </a>
+                    <a href="#library-panel" class="mdl-tabs__tab">
+                        <i class="material-icons">view_agenda</i>
+                    </a>
                 </div>
-            </div>
-            <div class="mdl-tabs__panel" id="library-panel">
-                <div class="mobile-container">
-                    {{#if user_types }}
-                        <h5>Your favorite shots</h5>
+                <div class="mdl-tabs__panel is-active" id="popular-panel">
+                    <div class="mobile-container">
+                        {{#popular}}
+                            <div class="image"><img src="{{ image }}"></div>
+                            <div class="name">{{ title }}</div>
+                            <div class="quantity">
+                                <button class="mdl-button mdl-js-button mdl-button--icon decrease popular">
+                                    <i class="material-icons">remove</i>
+                                </button>
+                                <span class="quantity">
+                                    <input type="text" name="quantity" value="{{ volume }}"
+                                           data-type-id="{{ id }}" data-step="{{ volume }}">
+                                    {{ measure }}
+                                </span>
+                                <button class="mdl-button mdl-js-button mdl-button--icon mdl-button--colored increase popular">
+                                    <i class="material-icons">add</i>
+                                </button>
+                            </div>
+                        {{/popular}}
+                    </div>
+                </div>
+                <div class="mdl-tabs__panel" id="library-panel">
+                    <div class="mobile-container">
+                        {{#if user_types }}
+                            <h5>Your favorite shots</h5>
+                            <ul class="mdl-list">
+                                {{#each user_types }}
+                                    {{>shot-type-item}}
+                                {{/each}}
+                            </ul>
+                            <h5>Other shots</h5>
+                        {{else}}
+                            <h5>Popular shots</h5>
+                        {{/if}}
                         <ul class="mdl-list">
-                            {{#each user_types }}
+                            {{#each all_types }}
                                 {{>shot-type-item}}
                             {{/each}}
                         </ul>
-                        <h5>Other shots</h5>
-                    {{else}}
-                        <h5>Popular shots</h5>
-                    {{/if}}
-                    <ul class="mdl-list">
-                        {{#each all_types }}
-                            {{>shot-type-item}}
-                        {{/each}}
-                    </ul>
+                    </div>
                 </div>
-            </div>
-         </div>
+             </div>
+        </div>
     </div>
     <div class="mdl-dialog__actions actions">
         <button type="button" class="mdl-button close">Close</button>
